fixed overflow problem, clean files and ready for more js

--- a/styles/general.css
+++ b/styles/general.css
@@ -2,7 +2,6 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  /* overflow: hidden; */
 }
 
 
@@ -18,8 +17,6 @@ body {
   color: var(--text-gray-color);
   font-size: 14px;
   font-weight:normal;
-
-  overflow: hidden;
   background-image: url("../images/background_medium.jpg");
   background-position: center;
   background-repeat: no-repeat;
