--- a/styles/header.css
+++ b/styles/header.css
@@ -1,13 +1,7 @@
-.header-container {
+#header {
   min-height: 48px;
   max-height: 48px;
-  overflow: hidden;
-  border: 1px solid red;
-}
-
-
-.header {
-  height: 100%;
+  
   display: flex;
   justify-content: space-evenly;
   align-items: center;
