--- a/styles/list.css
+++ b/styles/list.css
@@ -1,38 +1,3 @@
-#main-container {
-  display: flex;
-  flex-grow: 1;
-  width: 100%;
-}
-
-#board-container {
-  display: flex;
-  flex-grow: 1;
-  flex-direction: column;
-  overflow-x: auto;
-}
-
-#subHeader {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  min-height: 55px;
-  max-height: 55px;
-  background-color: rgba(34, 39, 43, 0.5);
-  backdrop-filter: blur(6px);
-}
-
-#board {
-  height: 100%;
-  display: block;
-  white-space: nowrap;
-  overflow-x: auto;
-  
-}
-
-#lists-array {
-  display: inline-block;
-}
-
 .list-container {
   width: 272px;
   height: 100%;
@@ -81,12 +46,4 @@
   margin-top: 15px;
   flex: 0 0 auto;
   position: relative;
-} 
-
-#list-creator-container {
-  display: inline-block;
-  vertical-align: top;
-  padding: 5px;
-  width: 272px;
-  border: 1px solid red;
 } 
