--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -1,35 +1,12 @@
-.sidebar-container {
-  /* position: fixed; */
-  height: 100%;
+
+#sidebar {
   width: 260px;
   min-width: 260px;
-  border: 1px solid orange;
-}
-
-.sidebar {
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  align-items: center;
   background-color: rgba(34, 39, 43, 0.9);
   backdrop-filter: blur(6px);
 }
-
-
-/* 
-.sidebarWrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-
-  position: fixed;
-  top: 48px;
-  left: 0;
-  bottom: 0;
-  width: 260px;
-
-  background-color: var(--bg-color);
-  opacity: 0.95;
-}
- */
